[gd_scene load_steps=19 format=3 uid="uid://o6g61xdkjii0"]

[ext_resource type="Script" path="res://examples/inventory_grid_stacked_transfer.gd" id="1_yjyyb"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid_ex.gd" id="2_ptyr5"]
[ext_resource type="Texture2D" uid="uid://bpmdtgysdm2tp" path="res://images/field_background.png" id="3_lwfya"]
[ext_resource type="Texture2D" uid="uid://cdhuw0juxw3up" path="res://images/field_highlighted_background.png" id="4_8hltm"]
[ext_resource type="Texture2D" uid="uid://b2hkcwwq10cut" path="res://icon.png" id="5_igoy6"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_item_slot_ex.gd" id="6_wlx5u"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_grid_stacked.gd" id="7_6cshf"]
[ext_resource type="Resource" uid="uid://ddrmqwl3guset" path="res://tests/data/item_definitions_grid.tres" id="8_8dj3i"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_item.gd" id="9_cdjm1"]
[ext_resource type="Script" path="res://addons/gloot/core/item_slot.gd" id="10_wh3ty"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="5"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="4"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="6"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="7"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[node name="InventoryGridStackedTransfer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjyyb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGridLeft" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("2_ptyr5")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")
draw_grid = false
selection_color = Color(0.745098, 0.745098, 0.745098, 1)
inventory_path = NodePath("../../../../../InventoryGridStackedLeft")
default_item_texture = ExtResource("5_igoy6")

[node name="BtnSortLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CtrlInventoryGridRight" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("2_ptyr5")
field_style = SubResource("3")
field_highlighted_style = SubResource("4")
selection_style = SubResource("6")
draw_grid = false
selection_color = Color(0.745098, 0.745098, 0.745098, 1)
inventory_path = NodePath("../../../../../InventoryGridStackedRight")
default_item_texture = ExtResource("5_igoy6")

[node name="BtnSortRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item Slot:"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CtrlItemSlot" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer3/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("6_wlx5u")
slot_style = SubResource("7")
slot_highlighted_style = SubResource("8")
item_slot_path = NodePath("../../../../../ItemSlot")
label_visible = false

[node name="BtnUnequip" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Unequip"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Drag and drop items to transfer them from one inventory to the other.
Press the 'Sort' buttons to sort the inventories.
Press the 'Split' buttons to split the selected stack in half.
Drag items from the right inventory onto the item slot to equip it.
Use the 'Unequip' button to unequip it."

[node name="InventoryGridStackedLeft" type="Node" parent="."]
script = ExtResource("7_6cshf")
size = Vector2i(5, 5)
item_protoset = ExtResource("8_8dj3i")

[node name="item_1x1" type="Node" parent="InventoryGridStackedLeft"]
script = ExtResource("9_cdjm1")
protoset = ExtResource("8_8dj3i")
prototype_id = "item_1x1"
properties = {
"stack_size": 2
}

[node name="item_2x2" type="Node" parent="InventoryGridStackedLeft"]
script = ExtResource("9_cdjm1")
protoset = ExtResource("8_8dj3i")
prototype_id = "item_2x2"
properties = {
"grid_position": Vector2i(0, 1),
"stack_size": 2
}

[node name="InventoryGridStackedRight" type="Node" parent="."]
script = ExtResource("7_6cshf")
size = Vector2i(5, 5)
item_protoset = ExtResource("8_8dj3i")

[node name="item_1x1" type="Node" parent="InventoryGridStackedRight"]
script = ExtResource("9_cdjm1")
protoset = ExtResource("8_8dj3i")
prototype_id = "item_1x1"
properties = {
"stack_size": 2
}

[node name="item_2x2" type="Node" parent="InventoryGridStackedRight"]
script = ExtResource("9_cdjm1")
protoset = ExtResource("8_8dj3i")
prototype_id = "item_2x2"
properties = {
"grid_position": Vector2i(0, 1),
"stack_size": 2
}

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("10_wh3ty")
inventory_path = NodePath("../InventoryGridStackedRight")

[node name="LblInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
